--- a/css/styles.css
+++ b/css/styles.css
@@ -599,8 +599,10 @@ progress {
 }
 
 .img-fluid {
-  max-width: 100%;
-  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .img-thumbnail {
