--- a/css/styles.css
+++ b/css/styles.css
@@ -599,10 +599,8 @@ progress {
 }
 
 .img-fluid {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+  max-width: 100%;
+  height: auto;
 }
 
 .img-thumbnail {
