--- a/css/styles.css
+++ b/css/styles.css
@@ -11570,3 +11570,9 @@ footer.footer .social-link:hover {
   font-size: 2.25rem;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
+
+.imgRedonda {
+    width:300px;
+    height:300px;
+    border-radius:150px;
+}
