--- a/css/styles.css
+++ b/css/styles.css
@@ -11574,5 +11574,5 @@ footer.footer .social-link:hover {
 .imgRedonda {
     width:75px;
     height:75px;
-    border-radius:75px;
+    border-radius:50%;
 }
